# carust

./: .gitignore  Cargo.toml  README.md
data/: README.md  rule_table.npy
data/ts/: time_series_0.npy  time_series_1.npy  time_series_2.npy  time_series_3.npy  time_series_4.npy  time_series_5.npy  time_series_6.npy  time_series_7.npy  time_series_8.npy  time_series_9.npy
src/: 2DTotalistic.rs  Totalistic2D.rs  main.rs  totalistic_2d.rs  utils.rs
