[package]
name = "carust"
version = "0.1.0"
authors = ["godzilla-but-nicer <patgwall@iu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.4"
convolutions-rs = "0.3.4"
clappers = "2.0.2"
ndarray-rand = "0.14.0"